# wuxingjie

./: json_element.h  parser.cc  parser.h  run.cc  scanner.cc  scanner.h
21days/: README.md
21days/chapter_13/: Fish.cpp
21days/human_class/: CMakeLists.txt  Human.cpp  Human.hpp  Human0.cpp
BdfTransfer/: CMakeLists.txt  main  main.cpp  tempCodeRunnerFile.cpp  try  try.cpp  try_main  try_main.cpp
BdfTransfer/BDF/: example.bdf  result.txt  try.bdf
BdfTransfer/include/: BdfInterpret.h  CBAR.h  Entry.h  Factory.h  GRID.h  bdfProcessor.h  bdfReader.h  bdfTransfer.h
BdfTransfer/include/card/: BDFentry.h  mat1.h
BdfTransfer/src/: CMakeLists.txt  TransferTool.cpp  bdfProcessor.cpp  bdfReader.cpp  bdfTransfer.cpp
BdfTransfer/src/card/: mat1.cpp
BdfTransfer/src/src/: Makefile
CylindrialToCartesian/: CMakeLists.txt  main.cpp  try  try.cpp
CylindrialToCartesian/include/: CylindrialToCartesian.h
CylindrialToCartesian/src/: CylindrialToCartesian.cpp
Matrix/: CMakeLists.txt  main.cpp
Matrix/include/: Matrix.h  VectorMulti.h
Matrix/src/: Matrix.cpp  VectorMulti.cpp
Matrix/test/: CMakeLists.txt  try.cpp
bdf_transfer/: example.bdf
bdf_transfer/include/: convertmaterial.h
bdf_transfer/src/: convertmaterial.cpp  tempCodeRunnerFile.cpp  try  try.cpp
bdfprocessor/src/: CMakeLists.txt  TransferTool.cpp  bdfTransfer.cpp
bdftransfer/: CMakeLists.txt  main.cpp  try  try.cpp
bdftransfer/BDF/: example.bdf  result.txt
bdftransfer/include/: DateModel.h  Reload.h  TransferTool.h  bdfReader.h  cbar.h  element.h  mat1.h  material.h
bdftransfer/src/: CMakeLists.txt  DateModel.cpp  bdfProcessor.cpp  bdfTransfer.cpp  cbar.cpp  mat1.cpp  reload.cpp
chapter_10/program_1/: fish
chapter_10/program_2/: fish.cpp
chapter_13/: Fish
chapter_21/: ismultiple.cpp
chapter_9/program_8/: CMakeLists.txt
coordinate_convert/: coordinate_convert  coordinate_convert.cpp  coordinate_convert.h  try.cpp
desian_modal/factory/: CMakeLists.txt  main.cpp
desian_modal/factory/include/: Factory.h  Human.h  Teacher.h  TeacherFactory.h
desian_modal/factory/src/: Human.cpp  Teacher.cpp  TeacherFactory.cpp
program_1/: lamda.cpp
(+184 files in other folders)
